unifi-controller-ec2-cloudformation.json
{
  "AWSTemplateFormatVersion": "2010-09-09",
  "Description": "Using Ubuntu 14.04 LTS hvm AMI image, configures a Ubiquiti Unifi Controller with an elastic IP and security group.",
  "Parameters": {
    "InstanceType": {
      "Description": "EC2 HVM T2 instance type",
      "Type": "String",
      "Default": "t2.micro",
      "AllowedValues": [
        "t2.micro",
        "t2.small",
        "t2.medium",
        "t2.large"
      ],
      "ConstraintDescription": "Must be a valid EC2 HVM instance type."
    },
    "KeyPair": {
      "Description": "The key pair to allow SSH access",
      "Type": "AWS::EC2::KeyPair::KeyName"
    },
    "Subnet": {
      "Description": "Select the subnet for the new EC2 instance",
      "Type": "AWS::EC2::Subnet::Id"
    },
    "Vpc": {
      "Description": "Select the vpc...",
      "Type": "AWS::EC2::VPC::Id"
    }
  },
  "Mappings": {
    "RegionMap": {
      "eu-central-1": {
        "AMI": "ami-accff2b1"
      },
      "ap-northeast-1": {
        "AMI": "ami-936d9d93"
      },
      "sa-east-1": {
        "AMI": "ami-4d883350"
      },
      "ap-southeast-2": {
        "AMI": "ami-f35b0590"
      },
      "ap-southeast-1": {
        "AMI": "ami-69631053"
      },
      "us-east-1": {
        "AMI": "ami-d05e75b8"
      },
      "us-west-2": {
        "AMI": "ami-5189a661"
      },
      "us-west-1": {
        "AMI": "ami-df6a8b9b"
      },
      "eu-west-1": {
        "AMI": "ami-47a23a30"
      }
    }
  },
  "Resources": {
    "UnifiElasticIp": {
      "Type": "AWS::EC2::EIP",
      "Properties": {
        "Domain": {
          "Ref": "Vpc"
        }
      }
    },
    "AssociateUnifiElasticIp": {
      "Type": "AWS::EC2::EIPAssociation",
      "Properties": {
        "AllocationId": {
          "Fn::GetAtt": [
            "UnifiElasticIp",
            "AllocationId"
          ]
        },
        "NetworkInterfaceId": {
          "Ref": "UnifiNetworkInterface"
        }
      }
    },
    "UnifiSecurityGroup": {
      "Type": "AWS::EC2::SecurityGroup",
      "Properties": {
        "VpcId": {
          "Ref": "Vpc"
        },
        "GroupDescription": "Unifi Controller Security Group",
        "SecurityGroupIngress": [
          {
            "IpProtocol": "tcp",
            "FromPort": 22,
            "ToPort": 22,
            "CidrIp": "0.0.0.0/0"
          },
          {
            "IpProtocol": "tcp",
            "FromPort": 8443,
            "ToPort": 8443,
            "CidrIp": "0.0.0.0/0"
          },
          {
            "IpProtocol": "tcp",
            "FromPort": 8080,
            "ToPort": 8080,
            "CidrIp": "0.0.0.0/0"
          },
          {
            "IpProtocol": "tcp",
            "FromPort": 8081,
            "ToPort": 8081,
            "CidrIp": "0.0.0.0/0"
          },
          {
            "IpProtocol": "tcp",
            "FromPort": 8880,
            "ToPort": 8880,
            "CidrIp": "0.0.0.0/0"
          },
          {
            "IpProtocol": "udp",
            "FromPort": 3478,
            "ToPort": 3478,
            "CidrIp": "0.0.0.0/0"
          }
        ],
        "Tags": [
          {
            "Key": "Name",
            "Value": "Unifi Controller Security Group"
          }
        ]
      }
    },
    "UnifiNetworkInterface": {
      "Type": "AWS::EC2::NetworkInterface",
      "Properties": {
        "Subnet": {
          "Ref": "Subnet"
        },
        "Description": "Interface for Unifi controller",
        "GroupSet": [
          {
            "Ref": "UnifiSecurityGroup"
          }
        ],
        "SourceDestCheck": "true"
      }
    },
    "UnifiInstance": {
      "Type": "AWS::EC2::Instance",
      "Properties": {
        "InstanceType": {"Ref": "InstanceType"},
        "ImageId": {
          "Fn::FindInMap": [
            "RegionMap",
            {
              "Ref": "AWS::Region"
            },
            "AMI"
          ]
        },
        "KeyName": {
          "Ref": "KeyPair"
        },

        "BlockDeviceMappings" : [
          {
            "DeviceName" : "/dev/sda1",
            "Ebs" : {
              "VolumeSize" : "30",
              "VolumeType": "gp2"
            }
          }
        ],
        "NetworkInterfaces": [
          {
            "NetworkInterfaceId": {
              "Ref": "UnifiNetworkInterface"
            },
            "DeviceIndex": "0"
          }
        ],
        "Tags": [
          {
            "Key": "Name",
            "Value": "Unifi Controller"
          }
        ],
        "UserData": {
          "Fn::Base64": {
            "Fn::Join": [
              "",
              [
                "#!/bin/bash -v\n",
                "/sbin/resize2fs /dev/sda1\n",
                "echo \"deb http://www.ubnt.com/downloads/unifi/debian stable ubiquiti\"",
                " > /etc/apt/sources.list.d/100-ubnt.list\n",
                "echo \"deb http://downloads-distro.mongodb.org/repo/ubuntu-upstart dist 10gen\"",
                " > /etc/apt/sources.list.d/200-mongo.list\n",
                "apt-key adv --keyserver keyserver.ubuntu.com --recv C0A52C50\n",
                "apt-key adv --keyserver keyserver.ubuntu.com --recv 7F0CEB10\n",
                "apt-get update\n",
                "apt-get install -y unifi"
              ]
            ]
          }
        }
      },
      "DependsOn": [
        "UnifiElasticIp",
        "UnifiSecurityGroup"
      ]
    }
  }
}
